--- a/Anubis/Makefile.am.common
+++ b/Anubis/Makefile.am.common
@@ -1,3 +1,3 @@
 AUTOMAKE_OPTIONS = foreign 
 
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/model
