--- a/Anubis/Makefile.in
+++ b/Anubis/Makefile.in
@@ -287,7 +287,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign 
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/model
 SUBDIRS = src include doc
 AUX_DIST = $(ac_aux_dir)/acinclude.m4  \
         $(ac_aux_dir)/config.guess  \
