--- a/Anubis/doc/man/Makefile.in
+++ b/Anubis/doc/man/Makefile.in
@@ -266,7 +266,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign 
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/model
 SUBDIRS = man1
 all: all-recursive
 
