--- a/Anubis/src/missing/Makefile.in
+++ b/Anubis/src/missing/Makefile.in
@@ -206,7 +206,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign 
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/model
 all: all-am
 
 .SUFFIXES:
